Fix background images bleeding through slides

--- a/frontend/scss/_slider.scss
+++ b/frontend/scss/_slider.scss
@@ -7,6 +7,8 @@
 	position: relative;
 	width: 100%;
 	
+	background: color(dbg);
+	
 	&-pagination
 	{
 		position: absolute;
